feat(review): added new Review entity with CRUD API support
- Implemented `Review` domain entity with the following fields: rating, comment, user, car, createdAt
- Added `ReviewFacade` interface and its `ReviewService` implementation
- Created `ReviewRepository` and `JpaReviewRepositoryAdapter` with implementation of basic operations
- Added `ReviewFactory` for creating reviews with validation and binding to Car and User
- Described new REST endpoints in gox.yaml
- Implemented corresponding methods in `CustomerRestController`, `CarRestController`, `AdminRestController` controllers.
